public class Alimentos {
    private String nombre;

    public Alimentos(String nombre) {
        this.nombre = nombre;
    }

    public String getNombre() {
        return nombre;
    }
}
